--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,8 @@ header {
    
     
 }
+
+
 a {
     text-decoration: none;
 }
@@ -30,9 +32,7 @@ h2 {
     text-align: right;
 
 }
-
-    
-    
+ 
 
 
 #logo-brl {
@@ -125,4 +125,39 @@ img {
 
 .informacion {
     margin-left: 2%;
+}
+
+@media only screen and (max-width: 414px) {
+
+    .info {
+        margin-top: 3em;
+    }
+
+    .proyecto {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    img {
+        width: 21em;
+    }
+
+    .proyecto p, h2 { 
+        text-align: center;
+    
+    }
+
+    .contacto {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contactos {
+        flex-direction: row;
+    }
+    .informacion {
+        margin-left: 0%;
+    }
+
+
 }
